rust-examples/tests/compile-fail/Rule_20_4.rs
#![deny(clippy)]
#[deny(warnings)]

macro_rules! while {
   () => (3;);
}

fn main() {
    println!("{}", while!());
}
